--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
-    Welcome to {{ title }}!
+    Welcome to M3. testproject!
   </h1>
   <img width="100" alt="" src="https://thumbs.gfycat.com/GlisteningWildBlobfish-max-1mb.gif">
 </div>
 
-<app-parent></app-parent>
+<router-outlet></router-outlet>
